2021-03-14  dyuret  <dyuret@login03.kuacc.ku.edu.tr>

	* xnor-lenet:
	- There is a strange state where grad is close to 0 but accuracy is 0.1?

	* training:
	- Not initializing weights is an inconvenience.
	- Still need Train20 and accuracy/nll from Ops20.

2021-02-27  dyuret  <dyuret@login03.kuacc.ku.edu.tr>

	* tf-eval.py: script that evaluates a keras model on imagenet val.
	50K images 4 GPUs 8 mins accuracy=0.7063
	tensorflow/python/keras/applications/mobilenet_v2.py claims 71.8 ???
	https://keras.io/api/applications/ claims 71.3 ???

	Classification Checkpoint|MACs (M)|Parameters (M)|Top 1 Accuracy|Top 5 Accuracy
	--------------------------|------------|---------------|---------|----|---------
	| [mobilenet_v2_1.4_224]  | 582 | 6.06 |          75.0 | 92.5 |
	| [mobilenet_v2_1.3_224]  | 509 | 5.34 |          74.4 | 92.1 |
	| [mobilenet_v2_1.0_224]  | 300 | 3.47 |          71.8 | 91.0 |
	| [mobilenet_v2_1.0_192]  | 221 | 3.47 |          70.7 | 90.1 |
	| [mobilenet_v2_1.0_160]  | 154 | 3.47 |          68.8 | 89.0 |
	| [mobilenet_v2_1.0_128]  | 99  | 3.47 |          65.3 | 86.9 |
	| [mobilenet_v2_1.0_96]   | 56  | 3.47 |          60.3 | 83.2 |
	| [mobilenet_v2_0.75_224] | 209 | 2.61 |          69.8 | 89.6 |
	| [mobilenet_v2_0.75_192] | 153 | 2.61 |          68.7 | 88.9 |
	| [mobilenet_v2_0.75_160] | 107 | 2.61 |          66.4 | 87.3 |
	| [mobilenet_v2_0.75_128] | 69  | 2.61 |          63.2 | 85.3 |
	| [mobilenet_v2_0.75_96]  | 39  | 2.61 |          58.8 | 81.6 |
	| [mobilenet_v2_0.5_224]  | 97  | 1.95 |          65.4 | 86.4 |
	| [mobilenet_v2_0.5_192]  | 71  | 1.95 |          63.9 | 85.4 |
	| [mobilenet_v2_0.5_160]  | 50  | 1.95 |          61.0 | 83.2 |
	| [mobilenet_v2_0.5_128]  | 32  | 1.95 |          57.7 | 80.8 |
	| [mobilenet_v2_0.5_96]   | 18  | 1.95 |          51.2 | 75.8 |
	| [mobilenet_v2_0.35_224] | 59  | 1.66 |          60.3 | 82.9 |
	| [mobilenet_v2_0.35_192] | 43  | 1.66 |          58.2 | 81.2 |