@@ -32,8 +32,8 @@ function __init__()
         if isempty(Knet.LibKnet8.libknet8)
             @warn "libknet8 library not found, some GPU functionality may not be available, try reinstalling Knet."
         end
-        Knet.array_type[] = Knet.KnetArrays.KnetArray{Float32}
-        AutoGrad.set_gc_function(Knet.KnetArrays.cuallocator[] ? Knet.AutoGrad_gpu.gcnode : Knet.AutoGrad_gpu.knetgcnode)
+        Knet.array_type[] = CUDA.CuArray{Float32}
+        AutoGrad.set_gc_function(Knet.AutoGrad_gpu.gcnode)
         if CUDA.has_nvml() # Pick the device with highest memory
             mem(d) = CUDA.NVML.memory_info(CUDA.NVML.Device(CUDA.uuid(d))).free
             CUDA.device!(argmax(Dict(d=>mem(d) for d in CUDA.devices())))
